compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__strings__string_prefix_binding_rest_with_guard.snap
---
source: compiler-core/src/javascript/tests/strings.rs
expression: "\npub fn classify(input: String, flag: Bool) -> String {\n  case input {\n    \"aa\" <> rest if flag -> rest\n    \"a\" <> rest -> rest\n    _ -> \"other\"\n  }\n}\n"
---
----- SOURCE CODE

pub fn classify(input: String, flag: Bool) -> String {
  case input {
    "aa" <> rest if flag -> rest
    "a" <> rest -> rest
    _ -> "other"
  }
}


----- COMPILED JAVASCRIPT
export function classify(input, flag) {
  if (input.startsWith("aa")) {
    if (flag) {
      let rest = input.slice(2);
      return rest;
    } else {
      let rest$1 = input.slice(1);
      return rest$1;
    }
  } else if (input.charCodeAt(0) === 97) {
    let rest = input.slice(1);
    return rest;
  } else {
    return "other";
  }
}
