compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__strings__string_prefix_falls_through_to_shorter_prefix_with_a_tuple_pattern.snap
---
source: compiler-core/src/javascript/tests/strings.rs
expression: "\npub fn go(a: #(Int), b: String) -> Int {\n  case a, b {\n    #(1), \"ab\" <> _ -> 1\n    _, \"a\" <> _ -> 2\n    _, _ -> 3\n  }\n}\n"
---
----- SOURCE CODE

pub fn go(a: #(Int), b: String) -> Int {
  case a, b {
    #(1), "ab" <> _ -> 1
    _, "a" <> _ -> 2
    _, _ -> 3
  }
}


----- COMPILED JAVASCRIPT
export function go(a, b) {
  if (b.startsWith("ab")) {
    if (a[0] === 1) {
      return 1;
    } else {
      return 2;
    }
  } else if (b.charCodeAt(0) === 97) {
    return 2;
  } else {
    return 3;
  }
}
