compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__strings__string_prefix_guard_on_bound_variable_falls_through.snap
---
source: compiler-core/src/javascript/tests/strings.rs
expression: "\npub fn classify(input: String) -> String {\n  case input {\n    \"aa\" <> rest if rest == \"x\" -> \"aa-x\"\n    \"a\" <> rest -> rest\n    _ -> \"other\"\n  }\n}\n"
---
----- SOURCE CODE

pub fn classify(input: String) -> String {
  case input {
    "aa" <> rest if rest == "x" -> "aa-x"
    "a" <> rest -> rest
    _ -> "other"
  }
}


----- COMPILED JAVASCRIPT
export function classify(input) {
  if (input.startsWith("aa")) {
    let rest = input.slice(2);
    if (rest === "x") {
      return "aa-x";
    } else {
      let rest$1 = input.slice(1);
      return rest$1;
    }
  } else if (input.charCodeAt(0) === 97) {
    let rest = input.slice(1);
    return rest;
  } else {
    return "other";
  }
}
