compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__strings__string_prefix_multibyte_falls_through_to_shorter.snap
---
source: compiler-core/src/javascript/tests/strings.rs
expression: "\npub fn classify(input: String) -> String {\n  case input {\n    \"🫥a\" <> rest if rest == \"x\" -> rest\n    \"🫥\" <> rest -> rest\n    _ -> \"other\"\n  }\n}\n"
---
----- SOURCE CODE

pub fn classify(input: String) -> String {
  case input {
    "🫥a" <> rest if rest == "x" -> rest
    "🫥" <> rest -> rest
    _ -> "other"
  }
}


----- COMPILED JAVASCRIPT
export function classify(input) {
  if (input.startsWith("🫥a")) {
    let rest = input.slice(3);
    if (rest === "x") {
      return rest;
    } else {
      let rest$1 = input.slice(2);
      return rest$1;
    }
  } else if (input.startsWith("🫥")) {
    let rest = input.slice(2);
    return rest;
  } else {
    return "other";
  }
}
