compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__strings__string_prefix_rest_is_not_recomputed_for_a_single_check.snap
---
source: compiler-core/src/javascript/tests/strings.rs
expression: "\npub fn classify(input: String, a: Bool, b: Bool) -> String {\n  case input {\n    \"aa\" <> _ if a -> \"aa\"\n    \"a\" <> _ if b -> \"a-guard\"\n    \"ac\" <> r -> r\n    _ -> \"other\"\n  }\n}\n"
---
----- SOURCE CODE

pub fn classify(input: String, a: Bool, b: Bool) -> String {
  case input {
    "aa" <> _ if a -> "aa"
    "a" <> _ if b -> "a-guard"
    "ac" <> r -> r
    _ -> "other"
  }
}


----- COMPILED JAVASCRIPT
export function classify(input, a, b) {
  if (input.startsWith("aa") && a) {
    return "aa";
  } else if (input.charCodeAt(0) === 97) {
    if (b) {
      return "a-guard";
    } else {
      let $ = input.slice(1);
      if ($.charCodeAt(0) === 99) {
        let r = $.slice(1);
        return r;
      } else {
        return "other";
      }
    }
  } else {
    return "other";
  }
}
